// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CommandButton <CommandButton /> renders correctly 1`] = `
<Icon
  icon={
    <Icon
      iconInfo={
        Object {
          "iconClass": "icon-placeholder",
          "iconElement": undefined,
        }
      }
    />
  }
  isDisabled={false}
  key="command1"
  onClick={[Function]}
  title="tests.label"
/>
`;

exports[`ToolButton <ToolButton /> renders correctly 1`] = `
<Icon
  icon={
    <Icon
      iconInfo={
        Object {
          "iconClass": "icon-placeholder",
          "iconElement": undefined,
        }
      }
    />
  }
  isActive={false}
  isDisabled={false}
  key="tool1"
  onClick={[Function]}
  title="tests.label"
/>
`;
